--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://cintiaromero.com
 root: /
-permalink: :title/
+permalink: :category/:title/
 permalink_defaults:
 
 # Directory
@@ -63,7 +63,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
-theme: tranquilpeak
+theme: cintiapub
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
